assets/less/base.less
html{
    position: relative;
    min-height: 100%;
}

.top-buffer{
    margin-top: 60px;
}

#logoRow{
    padding-top: 4px;
    padding-bottom: 4px;
    background: -webkit-linear-gradient(bottom, #f6d075 16%, #f1b82d 75%);
}

.navbar-inverse .navbar-toggle .icon-bar{
    background-color: @mizzou-gold;
}

.navbar{
    border-bottom: 2px solid @mizzou-gold;
}

body{
    //background: url('../images/darkdenim3.png
    background-color: #fff;
    color: #000;
    margin-bottom: 50px;
}

footer.footer.container-fluid{
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 50px;
    background-color: #000;
    border-top: 2px solid @mizzou-gold;
    color: @mizzou-gold;
    text-decoration: none;
    font-weight:lighter;
    font-size: smaller;
    a{
        color: #fff;
    }
}

.alert{
    position: fixed;
    top: 110px;
    left: 0;
    right: 0;
    z-index: 9999;
    font-size: 15px;
    font-weight: 600;
}

